force-app/main/default/objects/Inventory__c.object
<CustomObject>
    <description>Inventory object linking a product and a location.
Used to track the amount of the product at the location.</description>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the inventory</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that this inventory object tracks</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <description>The stock of product in the location</description>
        <label>Stock</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Inventory-{000000000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>